<resources>
    <string name="app_name">Személyi Jövedelemadó Quiz</string>

    <string name="quiz_question_01">Nem adókedvezmény</string>
    <string name="quiz_01_answer_a">a súlyosan fogyatékos személy esetén havi minimálbér 5%/hó</string>
    <string name="quiz_01_answer_b">az önkéntes nyugdíjpénztárba történt befizetés 50%-a</string>
    <string name="quiz_01_answer_c">az önkéntes kölcsönös biztosítópénztár(ak)ba befizetés 20%-a, lefeljebb 150.000 Ft.</string>

    <string name="quiz_question_02">A tartós befektetés szerződés alapján</string>
    <string name="quiz_02_answer_a">az adó mértéke 15%, ha a lekötést az elhelyezést követő hároméves lekötési időszak vége előtt szakítják meg</string>
    <string name="quiz_02_answer_b">az adó mértéke 0% az ötéves lekötési időszak végén,</string>
    <string name="quiz_02_answer_c">az adó mértéke 10% a hároméves lekötési időszak végén.</string>

    <string name="quiz_question_03">Milyen szám látható a pirossal bekeretezett mezőben?</string>
    <string name="quiz_03_answer_a">Adószám</string>
    <string name="quiz_03_answer_b">Adóazonosító jel</string>
    <string name="quiz_03_answer_c">Személyi szám</string>

    <string name="quiz_question_04">Nem adócsökkentő</string>
    <string name="quiz_04_answer_a">az adóhitel címén igénybevett befektetés 20%-a, legfeljebb 200.000 Ft,</string>
    <string name="quiz_04_answer_b">a szövetkezeti üzletrész megvásárlására  fordított összeg 30%-a a tagnál,</string>
    <string name="quiz_04_answer_c">a befizetett helyi adó 20%-a</string>

    <string name="quiz_question_05">Az adójóváírás</string>
    <string name="quiz_05_answer_a">a bér és az arra tekintettel megállapított adóalap-kiegészítés együttes összegének 16%-a,</string>
    <string name="quiz_05_answer_b">2012. január 1-jétől megszűnt,</string>
    <string name="quiz_05_answer_c">2.750.000 Ft-éves jövedelemig érvényesíthető teljes mértékben.</string>

    <string name="quiz_question_06">Az átalányadó mértéke</string>
    <string name="quiz_06_answer_a" formatted="false">kizárólag kiskereskedelmi tevékenység végzése esetén a bevétel 13%-ának 15%-a,</string>
    <string name="quiz_06_answer_b" formatted="false">maghatározott kiskereskedelmi tevékenység esetén a bevétel 7%-ának 30%-a,</string>
    <string name="quiz_06_answer_c" formatted="false">meghatározott tevékenység esetén az egyéni vállalkozó bevétele 20%-ának 15%-a.</string>

    <string name="quiz_question_07">Az átalányadó adóelőleget</string>
    <string name="quiz_07_answer_a">havonta a tárgyhót követő hó 10-ig,</string>
    <string name="quiz_07_answer_b">havonta a tárgyhót követő hó 20-ig,</string>
    <string name="quiz_07_answer_c">negyedévente a tárgyidőszakot követő hó 12-ig kell befizetni.</string>

    <string name="quiz_question_08">2013-tól a tartós befektetési szerződés lekötési nyilvántartásába kerülhet</string>
    <string name="quiz_08_answer_a">a zárt körben kibocsátott értékpapír</string>
    <string name="quiz_08_answer_b">a belföldön fekvő ingatlan,</string>
    <string name="quiz_08_answer_c">az ellenőrzött tőkepiaci ügylet keretében megszerzett nyilvános kibocsátású értékpapír.</string>

    <string name="quiz_question_09">Árfolyamnyereség számításánál a megszerzésre fordított összeg</string>
    <string name="quiz_09_answer_a">a NAV által igazolt érték,</string>
    <string name="quiz_09_answer_b">a vásárláskor érvényes tőzsdei átlagár,</string>
    <string name="quiz_09_answer_c">az értékpapír-kölcsönzésből származó nyereség.</string>

    <string name="quiz_question_10">15%-os adómértékkel adózik</string>
    <string name="quiz_10_answer_a">a tőzsdei ügyletből származó nyereség,</string>
    <string name="quiz_10_answer_b">az árfolyamnyereség,</string>
    <string name="quiz_10_answer_c">az értékpapítr-kölcsönzésből származó nyereség.</string>

    <!--Page titles-->
    <string name="main_title">Főoldal</string>
    <string name="quiz_title_01">Első kérdés</string>
    <string name="quiz_title_02">Második kérdés</string>
    <string name="quiz_title_03">Harmadik kérdés</string>
    <string name="quiz_title_04">Negyedik kérdés</string>
    <string name="quiz_title_05">Ötödik Kérdés</string>
    <string name="quiz_title_06">Hatodik Kérdés</string>
    <string name="quiz_title_07">Hetedik kérdés</string>
    <string name="quiz_title_08">Nyolcadik kérdés</string>
    <string name="quiz_title_09">Kilencedik kérdés</string>
    <string name="quiz_title_10">Tizedik kérdés</string>
    <string name="evaluation_title">Értékelés</string>

    <!--Common hint message-->
    <string name="common_hint_message">* Több helyes válasz is lehetséges.</string>
    <string name="common_hint_message_for_text_answer">* Válaszod szöveges formában add meg,
        további információért kattints a kérdőjelre.</string>

    <!--Other texts-->
    <string name="submite_button_text">Rendben</string>
    <string name="evaluation_button">Értékelés</string>
    <string name="restart_button_text">Újrakezdés</string>
    <string name="send_button">Küldés</string>
    <string name="quiz_point_text">Pontszám:</string>
    <string name="final_score_title">Eredmény:</string>
    <string name="q3_edit_text_hint">A válaszod *</string>
    <string name="main_prompt_text">A kezdéshez add meg a neved és az email címed!</string>
    <string name="main_page_textfield_01_hint">Név *</string>
    <string name="main_page_textfield_02_hint">Email cím *</string>
    <string name="main_page_explanation">* A csillaggal jelölt mezők kitöltése kötelező</string>
    <string name="mail_title">\t quiz értékelés összesítő</string>
    <string name="quiz_3_dialog_message">A válaszod pontosan kell megadnod például:
        \n
        \nAdószám
        \nAdóazonosító jel
        \nSzemélyi szám
        \n
        \nA válasz csak angol nyelven fogadható el.
        \n
        \nRossz válasz esetén kétszer újra próbálkozhatsz.</string>
    <string name="evaluate_message_start_string">Az eredményed:</string>
    <string name="dialog_positive_button">OK</string>

    <!--Toast Messages-->
    <string name="submite_no_text">Nem töltötted ki a kötelező mezőket!</string>
    <string name="submite_incorrect">A válasz helytelen</string>
    <string name="submite_correct">A válasz helyes</string>
    <string name="submite_only_one_correct">Csak az egyik válaszod helyes</string>
    <string name="submite_one_more_correct">Van még egy helyes válasz!</string>
    <string name="submite_all_correct">Az összes válaszod helyes!</string>
    <string name="submite_only_two">Csak két helyes válasz van!</string>
    <string name="submite_no_answer">Nem adtál meg egy választ sem!</string>
    <string name="submite_three_correct">Három helyes válasz van!</string>
    <string name="sumbite_wrong_new_trie">A válasz helytelen, próbáld újra!</string>
    <string name="submite_too_many">Túl sokszor próbálkoztál!</string>
    <string name="next_no_submite">Még nem adtál be megoldást!</string>
    
</resources>