<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.personalincometaxquiz.QuizSix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="6"
        android:background="@color/title_background_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <ImageView
                android:id="@+id/back_image_01"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:tint="@android:color/black"
                app:srcCompat="@drawable/ic_navigate_before_black_48dp"
                android:onClick="beckIconClick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/quiz_title_06"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title_size"
                android:fontFamily="@font/agency_fb"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <ImageView
                android:id="@+id/next_image_01"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_navigate_next_black_48dp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/prompt_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quiz_question_06"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/general_margin_padding"
            android:textSize="@dimen/question_text_size"
            android:textStyle="bold"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/prompt_text">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shadow_round">

                <CheckBox
                    android:id="@+id/quiz_06_answer_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_06_answer_a"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_margin="@dimen/general_margin_padding"
                    android:paddingLeft="@dimen/general_margin_padding" />

                <CheckBox
                    android:id="@+id/quiz_06_answer_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_06_answer_b"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_below="@id/quiz_06_answer_a"
                    android:layout_marginLeft="@dimen/general_margin_padding"
                    android:layout_marginRight="@dimen/general_margin_padding"
                    android:layout_marginBottom="@dimen/general_margin_padding"
                    android:paddingLeft="@dimen/general_margin_padding"/>

                <CheckBox
                    android:id="@+id/quiz_06_answer_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_06_answer_c"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_below="@id/quiz_06_answer_b"
                    android:layout_marginLeft="@dimen/general_margin_padding"
                    android:layout_marginRight="@dimen/general_margin_padding"
                    android:layout_marginBottom="@dimen/general_margin_padding"
                    android:paddingLeft="@dimen/general_margin_padding"/>

                <Button
                    android:id="@+id/quiz_six_submite_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/quiz_06_answer_c"
                    android:layout_alignParentRight="true"
                    android:text="@string/submite_button_text"
                    android:textSize="10sp"
                    android:layout_marginRight="@dimen/general_margin_padding"
                    android:onClick="quizSixSubmiteButtonClick"/>
            </RelativeLayout>
        </ScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/common_hint_message"
            android:layout_alignParentBottom="true"
            android:textSize="10sp"
            android:padding="@dimen/general_margin_padding"/>
    </RelativeLayout>
</LinearLayout>
