<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.personalincometaxquiz.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_title"
                android:textColor="@android:color/black"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/next_image_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:tint="@android:color/darker_gray"
                app:srcCompat="@drawable/ic_navigate_next_black_48dp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/prompt_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_promt_text"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/name_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_page_textfield_01_hint"
            android:layout_below="@id/prompt_text"/>

        <EditText
            android:id="@+id/email_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_page_textfield_02_hint"
            android:layout_below="@id/name_textfield"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_page_explanation"
            android:layout_alignParentBottom="true"
            android:textSize="10sp"/>
    </RelativeLayout>
</LinearLayout>
