<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.personalincometaxquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="6"
            android:background="@color/title_background_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/main_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/agency_fb"
                    android:gravity="center"
                    android:text="@string/main_title"
                    android:textSize="@dimen/title_size"
                    android:textColor="@color/title_color"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

                <ImageView
                    android:id="@+id/next_image_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_navigate_next_black_48dp"
                    android:onClick="nextIconClick"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/prompt_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_prompt_text"
                android:textColor="@android:color/black"
                android:layout_margin="@dimen/general_margin_padding"
                android:textSize="@dimen/question_text_size"
                android:textStyle="bold"/>

                <RelativeLayout
                    android:id="@+id/edit_text_countainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/prompt_text"
                    android:background="@drawable/shadow_round">

                    <EditText
                        android:id="@+id/name_textfield"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/main_page_textfield_01_hint"
                        android:layout_margin="@dimen/general_margin_padding"
                        android:paddingLeft="@dimen/general_margin_padding"/>

                    <EditText
                        android:id="@+id/email_textfield"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/main_page_textfield_02_hint"
                        android:layout_below="@id/name_textfield"
                        android:layout_marginLeft="@dimen/general_margin_padding"
                        android:layout_marginRight="@dimen/general_margin_padding"
                        android:layout_marginBottom="@dimen/general_margin_padding"
                        android:paddingLeft="@dimen/general_margin_padding"/>
                </RelativeLayout>

            <TextView
                android:id="@+id/common_prompt_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_page_explanation"
                android:layout_alignParentBottom="true"
                android:textSize="10sp"
                android:layout_margin="@dimen/general_margin_padding"
                android:layout_below="@id/edit_text_countainer"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
